--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -7,29 +7,47 @@
   }
 
   .customers{
-    box-shadow: 0 0 10px #747474;
-    border-collapse: collapse;
-    border-radius: 1em;
-    overflow: hidden;
-
+    border-radius: 8px;
     width: 100%;
     border: 1px solid;
 
-    th, td {
-      padding: 8px 10px;
-      border: 1px solid;
+    .head{
+      display: flex;
+      border-bottom: 1px solid;
+      background-color: #ccc;
+      border-radius: 8px 8px 0 0;
     }
 
     .table-title{
       font-weight: 600;
       font-size: 20px;
     }
+    .record-id{
+      width: 50px;
+      border-right: 1px solid;
+      padding: 8px 10px;
+    }
+    .record-name{
+      width: calc(100% - 50px);
+      padding: 8px 10px;
+    }
+
+    .body{
+      .table-row{
+        display: flex;
+        border-bottom: 1px solid;
+        &:last-child{
+          border-bottom: unset;
+        }
+      }
+    }
   }
   .info-message{
     color: #034c03c9;
     font-size: 20px;
-    margin-top: 20px;
     text-align: center;
+    padding: 8px 0;
+    height: 25px;
   }
 }
 
